April 30, 2021 - It's Been A While Edition
----------------------------
- Master and Yell added to MedFes since no one told me it was added
- And I only noticed because WW colossally fucked everything up lol

August 27, 2020 - Take A Seat, Young WW Server Edition
----------------------------
- Master difficulty unlocked and point tables changed for Token Events on WW

August 9, 2020 - Edition Edition Edition Edition Edition Edition Edition Edition Edition Edition
----------------------------
- 10x EXP campaign on JP, yikes. Time to add an EXP multiplier input. Long overdue, I guess.
- Removed the "Minimum Hours of Sleep" inputs for now... apparently I added those but never made them functional?
- Let's file these under "I'll get around to it at some point in the future, right?"

August 4, 2020 - WW Is Not Granted The Rank Of Master Edition
----------------------------
- Fixed an error when selecting Master Difficulty on EN
- Added the error message to the other calcs that have Master so far

June 20, 2020 - Twenty Editon Part II
----------------------------
- Hey there! Wow it's been exactly one month
- ChaFes calc can now deal with Yell Bonus, and the two new Technical and Master courses have been added

May 20, 2020 - Twenty Edition
----------------------------
- Hey! I'm currently working but ssssh don't tell anyone
- The usual "Master + Yell added", this time for Score Match

May 16, 2020 - HEY HEY MITE YO Edition
----------------------------
- Good day. Klab WW Team seems to have learned nothing.
- MedFes calculator temporarily uses 10x EXP for WW event.

May 5, 2020 - Member Place Edition
----------------------------
- Hello, Gordon! Have you been playing the Sudoku-ish puzzles the LL Twitter has been posting?
- It's a nice little time waster if you have nothing to do like me
- Just a little neat distraction, just like this update:
- Added Master Difficulty and Yell Unit Bonus to Nakayoshi Match

April 20/21, 2020 - Quarantine Edition