@@ -1,7 +1,7 @@
 var dateOverride = null;
 
 var notificationInfo = {
-    message: "<b>HEADS UP:</b> WW didn't add Master difficulty to MedFes. Watch out for that when using estimations - and also watch out for a visual bug related to the Cheer Bonus that makes it look like it resets every time you play a medley (it doesn't).",
-    id: 23,
-    allowDismiss: false
+    message: "<b>June 10 Update: 🦀🦀🦀 WW IS GONE 🦀🦀🦀</b><br>Of course, with an update like removing all region selection code, new bugs might crop up. Please let me know if you find any problems (contacts are in the side menu)!",
+    id: 24,
+    allowDismiss: true
 };
