@@ -1,3 +1,9 @@
+June 10, 2021 - WW IS GONE EDITION
+----------------------------
+- YEEEEEEEEEEEEEEEEEEEEEEE
+- All region selection things removed from the entire calc
+- That means the """"temporary fix"""" from the September 2015 update is finally gone LOL
+
 April 30, 2021 - It's Been A While Edition
 ----------------------------
 - Master and Yell added to MedFes since no one told me it was added
